transfert de l'array dans l'app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <h1 class="col-xs-7">
         Posts
       </h1>
-      <app-post-list class="col-xs-7"></app-post-list>
+      <app-post-list [mesPosts]="posts" class="col-xs-7"></app-post-list>
     </div>
   </div>
 </div>
