--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -1,3 +1,3 @@
 <ul class="list-group col-xs-12">
-  <app-post-list-item *ngFor="let post of posts" [postTitle]="post.title" [postContent]="post.content" [postLoveIts]="post.loveIts" [postDate]="post.created_at"></app-post-list-item>
+  <app-post-list-item *ngFor="let post of mesPosts" [postTitle]="post.title" [postContent]="post.content" [postLoveIts]="post.loveIts" [postDate]="post.created_at"></app-post-list-item>
 </ul>
